--- a/src/app/components/treewithfilter/treewithfilter.component.html
+++ b/src/app/components/treewithfilter/treewithfilter.component.html
@@ -1,6 +1,6 @@
 
 <mat-form-field>
-	<input matInput placeholder="Search" (input)="filterChanged($event)">
+	<input matInput placeholder="Search" (input)="applyFilter($event)">
 </mat-form-field> 
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
